updated visible tags to span for better css selection

--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
   <body>
     <div class="snes-controller">
       <div class="d-pad">
-        <div class="up arrow"></div>
-        <div class="left arrow"></div>
-        <div class="right arrow"></div>
-        <div class="down arrow"></div>
+        <span class="up arrow"></span>
+        <span class="left arrow"></span>
+        <span class="right arrow"></span>
+        <span class="down arrow"></span>
       </div>
       <div class="menu-buttons">
-        <div class="select"></div>
-        <div class="start"></div>
+        <span class="select"></span>
+        <span class="start"></span>
       </div>
       <div class="buttons">
-        <div class="x"></div>
-        <div class="y"></div>
-        <div class="b"></div>
-        <div class="a"></div>
+        <span class="x"></span>
+        <span class="y"></span>
+        <span class="b"></span>
+        <span class="a"></span>
       </div>
       <div class="bumpers">
-        <div class="left"></div>
-        <div class="right"></div>
+        <span class="left"></span>
+        <span class="right"></span>
       </div>
     </div>
+    <link rel="stylesheet" href="css/controller.css">
+    <!-- <script src="javascript/controller.js"></script> -->
   </body>
 </html>
