update bummper button class to over conflict

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <span class="a"></span>
       </div>
       <div class="bumpers">
-        <span class="left"></span>
-        <span class="right"></span>
+        <span class="left-bumper"></span>
+        <span class="right-bumper"></span>
       </div>
     </div>
     <link rel="stylesheet" href="css/controller.css">
-    <!-- <script src="javascript/controller.js"></script> -->
+    <script src="javascript/controller.js"></script>
   </body>
 </html>
