abstracted contorller mapping

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
     </div>
     <link rel="stylesheet" href="css/controller.css">
+    <script src="javascript/controllerMapping.js"></script>
     <script src="javascript/controller.js"></script>
   </body>
 </html>
